Utility work to firm up graph constraints.